# AIAgent

./: .editorconfig  Cargo.toml  README.md
apps/agent-bot/: Cargo.toml  README.md
apps/agent-bot/src/: main.rs
apps/agent-cli/: Cargo.toml
apps/agent-cli/src/: main.rs
crates/agent-config/: Cargo.toml
crates/agent-config/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  channel.rs  error.rs  evolution.rs  frontmatter.rs  lib.rs  llm.rs  memory.rs  message.rs  prompt.rs  session.rs  store.rs  text.rs  tool.rs
crates/agent-evolution/: Cargo.toml
crates/agent-evolution/src/: lib.rs  reflection.rs  summariser.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: lib.rs  registry.rs  sse.rs
crates/agent-llm/src/providers/: anthropic.rs  mod.rs  openai.rs  openai_embeddings.rs
crates/agent-memory/: Cargo.toml
crates/agent-memory/migrations/: 0001_init.sql  0002_vectors.sql  0003_summaries.sql
crates/agent-memory/src/: facts.rs  lib.rs  prompt.rs  sqlite.rs  vectors.rs
crates/agent-memory/tests/: sqlite_roundtrip.rs
crates/agent-skills/: Cargo.toml
crates/agent-skills/src/: augmenter.rs  error.rs  lib.rs  rule.rs  skill.rs
crates/agent-telemetry/: Cargo.toml
crates/agent-telemetry/src/: init.rs  lib.rs  pricing.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: builtin.rs  lib.rs
crates/agent-tools/src/builtin/: bash.rs  fetch.rs  file_edit.rs  file_read.rs  glob_tool.rs  grep.rs  memory_tools.rs  path_safety.rs  propose.rs
docs/: architecture.md
examples/agent-config/rules/: coding-style.md
examples/agent-config/skills/: code-review.md
