[package]
name = "agent-bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bot / IM front-end placeholder. Adapters will live here."

[[bin]]
name = "agent-bot"
path = "src/main.rs"

[dependencies]
agent-core = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
