[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line front-end for the AI agent runtime."

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-core      = { workspace = true }
agent-llm       = { workspace = true }
agent-tools     = { workspace = true }
agent-skills    = { workspace = true }
agent-memory    = { workspace = true }
agent-config    = { workspace = true }
agent-telemetry = { workspace = true }

anyhow  = { workspace = true }
clap    = { workspace = true }
tokio   = { workspace = true }
tracing = { workspace = true }
