[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AI Agent runtime core: messages, agent loop, channel abstraction."

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
