[package]
name = "agent-evolution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Self-evolution: reflection, rule extraction, skill synthesis (half-automated)."

[dependencies]
agent-core   = { workspace = true }
agent-memory = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
