[package]
name = "agent-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LLM provider abstraction and concrete clients (OpenAI / DeepSeek / Anthropic)."

[dependencies]
agent-core  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
reqwest     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
