[package]
name = "agent-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tool trait, registry, and built-in tools (file, shell, fetch, etc.)."

[dependencies]
agent-core  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
regex       = { workspace = true }
glob        = { workspace = true }
reqwest     = { workspace = true }
uuid        = { workspace = true }
